--- a/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
+++ b/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
@@ -278,12 +278,64 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="friendCell" id="ZM7-Q1-wT7" customClass="FriendTableViewCell" customModule="MemeThing" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="32"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZM7-Q1-wT7" id="Z8R-D4-Kjf">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="32"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="bNm-WN-uDj">
+                                            <rect key="frame" x="20" y="1" width="394" height="30"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="[main text]" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mib-ft-RxE">
+                                                    <rect key="frame" x="0.0" y="0.0" width="128" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="[points text]" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IOn-E2-g8R">
+                                                    <rect key="frame" x="136" y="0.0" width="126" height="30"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="90P-XR-gps">
+                                                    <rect key="frame" x="270" y="0.0" width="124" height="30"/>
+                                                    <subviews>
+                                                        <button opaque="NO" alpha="0.59999999999999998" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VNI-Kr-fhq">
+                                                            <rect key="frame" x="0.0" y="0.0" width="61.5" height="30"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" title="Accept"/>
+                                                            <connections>
+                                                                <action selector="friendRequestButtonTapped:" destination="ZM7-Q1-wT7" eventType="touchUpInside" id="21q-wX-kRF"/>
+                                                            </connections>
+                                                        </button>
+                                                        <button opaque="NO" alpha="0.59999999999999998" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="krd-dB-ZTG">
+                                                            <rect key="frame" x="62.5" y="0.0" width="61.5" height="30"/>
+                                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <state key="normal" title="Deny"/>
+                                                            <connections>
+                                                                <action selector="friendRequestButtonTapped:" destination="ZM7-Q1-wT7" eventType="touchUpInside" id="DSe-kJ-EtK"/>
+                                                            </connections>
+                                                        </button>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="90P-XR-gps" firstAttribute="width" secondItem="Z8R-D4-Kjf" secondAttribute="width" multiplier="0.3" id="6v8-bt-r9w"/>
+                                        <constraint firstItem="bNm-WN-uDj" firstAttribute="leading" secondItem="Z8R-D4-Kjf" secondAttribute="leadingMargin" id="EEm-Sp-Lg3"/>
+                                        <constraint firstItem="bNm-WN-uDj" firstAttribute="height" secondItem="Z8R-D4-Kjf" secondAttribute="height" multiplier="0.95" id="PgR-8e-Xs6"/>
+                                        <constraint firstAttribute="trailing" secondItem="bNm-WN-uDj" secondAttribute="trailing" id="Pts-1s-6hM"/>
+                                        <constraint firstItem="bNm-WN-uDj" firstAttribute="centerY" secondItem="Z8R-D4-Kjf" secondAttribute="centerY" id="QAB-OR-NAk"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="buttonStackView" destination="90P-XR-gps" id="X3a-g7-fwr"/>
+                                    <outlet property="pointsLabel" destination="IOn-E2-g8R" id="Pqr-T8-Y9j"/>
+                                    <outlet property="usernameLabel" destination="Mib-ft-RxE" id="INd-RS-DoT"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
