--- a/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
+++ b/MemeThing/Views/MemeThing/Views/Base.lproj/MainMenu.storyboard
@@ -329,6 +329,7 @@
                                             </subviews>
                                         </stackView>
                                     </subviews>
+                                    <color key="backgroundColor" systemColor="systemGray4Color" red="0.81960784310000001" green="0.81960784310000001" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
                                         <constraint firstItem="90P-XR-gps" firstAttribute="width" secondItem="Z8R-D4-Kjf" secondAttribute="width" multiplier="0.3" id="6v8-bt-r9w"/>
                                         <constraint firstItem="bNm-WN-uDj" firstAttribute="leading" secondItem="Z8R-D4-Kjf" secondAttribute="leadingMargin" id="EEm-Sp-Lg3"/>
